--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-streamlit
-pandas
+streamlit>=1.38
+pandas>=2.2
+streamlit-tooltip>=0.1.6
+streamlit-extras>=0.4.3
+# optional, for persistence
+tinydb>=4.8
